--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -858,8 +858,10 @@ span.sim_check.active { background-position:0px 0px; }
 #footer .menu { padding-bottom:20px}
 #footer .menu li, #footer .menu a { font-weight:bold; color:#fff; font-size:15px;}
 
-#footer .copy, #footer .create { opacity:0.6; line-height:1.3}
+#footer .copy, #footer .create, #footer .license { opacity:0.6; line-height:1.3}
 #footer .copy { padding-bottom:12px;}
+
+#footer .license { padding-top:102px; width:255px; margin-left:-5px}
 
 #footer .gen_sponsor span { opacity:0.6; font-size:17px; font-weight:600; line-height:1.2 }
 #footer .gen_sponsor img { margin-bottom:10px}
