--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -9,8 +9,8 @@
           <span>дарит городу праздник<br />
 в честь своего 20-летия</span>
         </div>
-	<br /><br /><br />
-	<div class="create">
+
+	<div class="create license">
 	  Генеральная лицензия Банка России No. 1978 от 20 января 2000 г.
 	</div>
 
